--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* --------------------basic start---------------------------- */
 body{
   background-color: #f5f5f5;
   margin: 0; 
@@ -37,8 +38,10 @@ p {
   width: 60px;
   height: 60px;
 }
+/* --------------------basic end---------------------------- */
+/* --------------------navbar start---------------------------- */
 
-.navbar .nav-link.active ,.navbar .nav-link.active:target{
+.navbar .nav-link.active ,.navbar .nav-link.active::before{
   color: #0075ff;
 }
 .navbar .nav-link{
@@ -70,7 +73,7 @@ p {
 }
 
 
- .nav-link:before {
+.nav-link:before {
   --inline-gap:0.9375rem;  
   content: '';
   position: absolute;
@@ -81,8 +84,8 @@ p {
   background-color: #0075ff;
 }
 
- .nav-link:hover::before,
- .nav-link .active::before {
+.nav-link:hover::before,
+.nav-link .active::before {
   width: calc(100% - (var(--inline-gap) * 1));
 }
 body:not(body:has(:target)) li a[href="#home"],
@@ -106,7 +109,8 @@ body:has(.contact-section:target) li a[href="#contact"]::before {
 span{
   color: #fff;
 }
-
+/* --------------------navbar end---------------------------- */
+/* ------------------------home section start------------------------ */
 .home-section {
   height: 100vh;
   background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) , url(../img/hero-bg.jpg);
@@ -118,7 +122,7 @@ span{
   font-size: 4.5rem;
 }
 .animated-text{
-font-size: 2.5rem;
+  font-size: 2.5rem;
 }
 /* ------------------------home section end------------------------ */
 /* ------------------------about section start------------------------ */
@@ -286,7 +290,6 @@ font-size: 2.5rem;
   margin-bottom: 0;
 }
 
-
 /* ------------------------counter section ENd------------------------ */
 /* ------------------------work section start------------------------ */
 .work-section {
@@ -295,6 +298,15 @@ font-size: 2.5rem;
 .btn{
   padding: 0;
   margin: 0 ;
+}
+.zoomin {
+  transition: all 1s;
+}
+.zoomin:hover {
+  transform: scale(1.3);
+}
+.img-wrapper {
+  overflow: hidden;
 }
 .cards {
   padding-inline: .9375rem;
@@ -332,7 +344,8 @@ font-size: 2.5rem;
 .btn-close {
   cursor: pointer;
 }
-
+/* ------------------------work section end------------------------ */
+/* ------------------------testimonials section start------------------------ */
 .testimonials {
   background-image:linear-gradient(rgba(0,120,255,0.7),rgba(0,120,255,0.7) ), url(../img/overlay-bg.jpg);
   padding: 8rem 0;
@@ -394,4 +407,94 @@ font-size: 2.5rem;
   margin: 0 auto;
   border-radius: 50%;
   line-height: 1
+}
+/* ------------------------testimonials section end------------------------ */
+/* ------------------------blog section start------------------------ */
+.blog-section {
+  padding-top: 4rem;
+}
+.card-wrapper {
+  padding-inline: .9375rem;
+}
+.card-body {
+  position: relative;
+  padding: 1.25rem;
+  height: 12.4094rem;
+}
+.card-category-box {
+  position: absolute;
+  text-align: center;
+  top: -16px;
+  left: 15px;
+  right: 15px;
+  line-height: 25px;
+  overflow: hidden;
+}
+.card-category {
+  display: inline-block;
+  color: #fff;
+  padding: 0 15px 5px;
+  overflow: hidden;
+  background-color: #0078ff;
+  border-radius: 4px;
+}
+ .card-category .category {
+  color: #fff;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: .7rem;
+  letter-spacing: .1px;
+  margin-bottom: 0;
+}
+.card-title {
+  font-size: 1.3rem;
+  margin-top: .6rem;
+  margin-bottom: .75rem;
+  transition: all 0.5s ease-in-out;
+}
+.card-title:hover {
+  color: #0078ff;
+  text-decoration: none;   
+}
+.card-text {
+  color: #4e4e4e;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.card-footer {
+    padding: .75rem 1.25rem;
+    background-color: rgba(0, 0, 0, .03);
+    border-top: 1px solid rgba(0, 0, 0, .125);
+}
+
+.avatar-card {
+  width: 32px;
+  height: 32px;
+  margin-right: 4px;
+  overflow: hidden;
+}
+.post-author {
+  display: inline-block ;
+}
+.author {
+  color: #1e1e1e;
+}
+.post-link span  {
+  transition: all 0.5s ease-in-out;
+}
+.post-link span:hover {
+  color: #0075ff;
+}
+.fa-clock {
+  font-size: 0.8rem;
+}
+.post-date {
+  font-weight: 400;
+}
+/* ------------------------blog section end------------------------ */
+/* ------------------------contact section start------------------------ */
+.contact-section {
+  padding-top: 4rem;
+  margin-top: 4rem;
 }
